Fix bug of missing of footer paragraphs spacing.

--- a/styles/_footer.scss
+++ b/styles/_footer.scss
@@ -17,7 +17,9 @@ footer {
     border: none;
   }
 
-  p {
-    margin-bottom: 0;
+  .copywrite-section {
+    p {
+      margin-bottom: 0;
+    }
   }
 }
